# arcticdev

./: .gitignore  .svn.ignore  .svn.ignore.global  AUTHORS  INSTALL  Makefile.am  README  configure.ac  extract_svn_revision.sh  fixunix.sh  make_precompiled_header.sh  make_precompiled_header_debug.sh  precompile_debug.sh  precompile_release.sh  revision.BAT  revision.sh  svn_revision.sh
0.07/contrib/map_extractor/: CMakeLists.txt  VC90-AD.vcproj  adt.h  dbcfile.h  wmoJuicer.cpp  wmoJuicer.h
0.07/contrib/map_extractor/libmpq/: CMakeLists.txt  common.cpp  explode.h  huffman.cpp  mpq.cpp  mpq.h  wave.h  zconf.h  zlib.h
0.07/contrib/map_extractor/loadlib/: adt.cpp  adt.h
src/AuthServer/: AccountCache.cpp  AccountCache.h  AuthCommServer.cpp  AuthCommServer.h  AuthConsole.cpp  AuthConsole.h  AuthOpcodes.cpp  AuthOpcodes.h  AuthServer.cpp  AuthServer.h  AuthSocket.cpp  AuthSocket.h  AuthStdAfx.cpp  AuthStdAfx.h  AuthStructs.h  AutoPatcher.cpp  AutoPatcher.h  LogonCommServer.cpp  LogonCommServer.h  LogonConsole.cpp  LogonConsole.h  LogonOpcodes.cpp  LogonOpcodes.h  LogonStdAfx.cpp  LogonStdAfx.h  Main.cpp  Main.h  Makefile.am  PeriodicFunctionCall_Thread.h  icon.rc
src/ClusterServer/: AuthCommClient.cpp  AuthCommClient.h  AuthCommHandler.cpp  AuthCommHandler.h  Channel.cpp  Channel.h  ChannelHandler.cpp  ChannelMgr.h  CharacterHandler.cpp  Chat.cpp  Chat.h  ChatHandler.cpp  ClientManager.cpp  ClientManager.h  ClusterManager.cpp  ClusterManager.h  ConsoleCommands.cpp  ConsoleCommands.h  ConsoleListener.cpp  LocalizationMgr.cpp  LocalizationMgr.h  LogonCommClient.cpp  LogonCommClient.h  LogonCommHandler.cpp  LogonCommHandler.h  Main.cpp  Makefile.am  Master.cpp  Master.h  ObjectStorage.cpp  ObjectStorage.h  QueryHandler.cpp  RStdAfx.cpp  RStdAfx.h  Session.cpp  Session.h  Structures.h  WorkerOpcodes.h  WorkerServer.cpp  WorkerServer.h  (+5 more)
src/VoiceServer/: Makefile.am  arctic_opcodes.h  arctic_packet.h  arctic_socket.c  common.h  configfile.c  configfile.h  launcher.c  linkedlist.h  log.c  log.h  mutex.c  mutex.h  network.h  network_handlers.c  network_handlers.h  network_unixepoll.c  network_unixkqueue.c  network_unixselect.c  network_win32.c  voice_channel.c  voice_channel.h  voice_channelmgr.h  voice_socket.c
src/libs/: AuthCodes.h  BufferPool.cpp  BufferPool.h  ByteBuffer.h  CThreads.cpp  CThreads.h  CallBack.cpp  CallBack.h  CircularQueue.h  Common.h  Config.h  CoreMemoryAllocator.cpp  CoreMemoryAllocator_Core.cpp  CrashHandler.cpp  CrashHandler.h  Errors.h  FastQueue.h  Getopt.cpp  Getopt.h  LocationVector.h  Log.cpp  Log.h  Makefile.am  MemoryLeaks.cpp  MemoryLeaks.h  MersenneTwister.cpp  MersenneTwister.h  NGLog.h  New-Bytebuffer.h  PacketLog.cpp  PacketLog.h  PreallocatedQueue.h  RC4Engine.h  SharedPtr.h  Singleton.h  SmartPointer.h  StackBuffer.h  StackWalker.cpp  StackWalker.h  Storage.h  (+18 more)
src/libs/Auth/: AuthPacketKey.h  BigNumber.cpp  BigNumber.h  HMAC.cpp  HMAC.h  MD5.cpp  MD5.h  Sha1.cpp  Sha1.h  WowCrypt.cpp  WowCrypt.h
src/libs/Collision/: Interface.cpp  LocationVector.h
src/libs/Collision/g3dlite/: AABox.cpp  Box.cpp  Crypto.cpp  Matrix3.cpp  Plane.cpp  System.cpp  Triangle.cpp  Vector3.cpp  Vector4.cpp  format.cpp
src/libs/Collision/vmap/: AABSPTree.h  BaseModel.cpp  BaseModel.h  CoordModelMapping.cpp  CoordModelMapping.h  IVMapManager.h  ManagedModelContainer.cpp  ManagedModelContainer.h  ModelContainer.cpp  ModelContainer.h  NodeValueAccess.h  RayIntersectionIterator.h  ShortBox.h  ShortVector.h  SubModel.cpp  SubModel.h  TileAssembler.cpp  TileAssembler.h  TreeNode.cpp  TreeNode.h  VMapManager.cpp  VMapManager.h
src/libs/Config/: Config.cpp  Config.h  ConfigEnv.h
src/libs/Console/: BaseConsole.h  CConsole.cpp  CConsole.h  ConsoleListener.cpp
src/libs/DataStorage/: CreateInterface.cpp  DBC.cpp  DBC.h  DBCStores.cpp  DBCStores.h  DataStore.h  Database.cpp  Database.h  DatabaseEnv.h  Field.h  MySQLDatabase.cpp  MySQLDatabase.h  PostgresDatabase.cpp  PostgresDatabase.h  SQLiteDatabase.cpp  SQLiteDatabase.h  dbcfile.cpp  dbcfile.h
src/libs/Database/: CreateInterface.cpp  DBC.cpp  DBC.h  DBCStores.cpp  DBCStores.h  DataStore.h  Database.cpp  Database.h  DatabaseEnv.h  Field.h  MySQLDatabase.cpp  MySQLDatabase.h  PostgresDatabase.cpp  PostgresDatabase.h  SQLiteDatabase.cpp  SQLiteDatabase.h  dbcfile.cpp  dbcfile.h
src/libs/Network/: CircularBuffer.cpp  CircularBuffer.h  ListenSocketFreeBSD.h  ListenSocketLinux.h  ListenSocketPoll.h  ListenSocketSelect.h  ListenSocketWin32.h  Network.h  Socket.cpp  Socket.h  SocketDefines.h  SocketFreeBSD.cpp  SocketLinux.cpp  SocketMgrFreeBSD.cpp  SocketMgrFreeBSD.h  SocketMgrLinux.cpp  SocketMgrLinux.h  SocketMgrPoll.cpp  SocketMgrPoll.h  SocketMgrSelect.cpp  SocketMgrSelect.h  SocketMgrWin32.cpp  SocketMgrWin32.h  SocketOps.h  SocketOpsFreeBSD.cpp  SocketOpsLinux.cpp  SocketOpsPoll.cpp  SocketOpsSelect.cpp  SocketOpsWin32.cpp  SocketPoll.cpp  SocketSelect.cpp  SocketWin32.cpp
src/libs/Network-New/: BaseBuffer.h  BaseSocket.h  CircularBuffer.h  ListenSocket.h  Network.h  SocketEngine.cpp  SocketEngine.h  SocketEngine_epoll.cpp  SocketEngine_epoll.h  SocketEngine_iocp.cpp  SocketEngine_iocp.h  SocketEngine_kqueue.cpp  SocketEngine_kqueue.h  SocketEngine_poll.cpp  SocketEngine_poll.h  SocketEngine_select.cpp  SocketEngine_select.h  StraightBuffer.h  TcpSocket.cpp  TcpSocket.h
src/libs/Pathfinding/Detour/: DetourCommon.h  DetourNavMesh.cpp
src/libs/Pathfinding/Recast/: RecastRegion.cpp
src/libs/Threading/: Condition.h  Guard.h  LockedQueue.h  Mutex.cpp  Mutex.h  Queue.h  RWLock.h  ThreadPool.cpp  ThreadPool.h  ThreadStarter.h  Threading.h
src/libs/Utilities/: Arctic.cpp  Arctic.h  Timer.h  Util.cpp  Util.h  Utility.cpp  Utility.h
src/libs/locale/AIInterface/: enGB_AIInterface.h  ruRU_AIInterface.h
src/libs/locale/AchievementInterface/: enGB_AchievementInterface.h  ruRU_AchievementInterface.h
src/libs/locale/AlteracValley/: enGB_AlteracValley.h  ruRU_AlteracValley.h
src/libs/locale/ArathiBasin/: enGB_ArathiBasin.h  ruRU_ArathiBasin.h
src/libs/locale/ArenaTeam/: enGB_ArenaTeam.h  ruRU_ArenaTeam.h
(+1145 files in other folders)
