# Arctic MMORPG Server Software
# Copyright (c) 2008-2010 Arctic Server Team
# See COPYING for license details.

# Process this file with automake to produce Makefile.in

# Additional files to include when running 'make dist'
EXTRA_DIST = reconf configure

# Sub-directories to parse
SUBDIRS = src

ACLOCAL_AMFLAGS = -I m4
AUTOMAKE_OPTIONS = foreign
