INCLUDES += -I$(srcdir) -I$(srcdir)/../libs

bin_PROGRAMS = AuthServer

AuthServer_SOURCES = \
	AccountCache.cpp \
	AccountCache.h \
	AuthSocket.cpp \
	AuthSocket.h \
	AuthStructs.h \
	LogonCommServer.cpp \
	LogonCommServer.h \
	LogonConsole.cpp \
	LogonConsole.h \
	LogonOpcodes.cpp \
	LogonOpcodes.h \
	LogonStdAfx.cpp \
	LogonStdAfx.h \
	AutoPatcher.h \
	AutoPatcher.cpp \
	Main.cpp \
	Main.h \
	PeriodicFunctionCall_Thread.h

AuthServer_LDADD = -lshared -lz
AuthServer_LDFLAGS = -L$(srcdir)/../libs
