# Arctic MMORPG Server Software
# Copyright (c) 2008-2010 Arctic Server Team
# See COPYING for license details.

INCLUDES += -I$(srcdir)

bin_PROGRAMS = VoiceServer

VoiceServer_SOURCES = \
arctic_opcodes.h \
arctic_packet.h \
arctic_socket.c \
common.h \
configfile.c \
configfile.h \
launcher.c \
linkedlist.h \
log.c \
log.h \
mutex.h \
mutex.c \
network.h \
network_handlers.h \
network_handlers.c \
network_unixselect.c \
network_unixepoll.c \
network_unixkqueue.c \
voice_channel.c \
voice_channel.h \
voice_channelmgr.h \
voice_socket.c
