INCLUDES += -I$(srcdir) -I$(srcdir)/../../../../dep/include -I$(srcdir)/../../../libs
INCLUDES += -I$(srcdir)/../../../libs/g3dlite -I$(srcdir)/../../../libs/vmap
INCLUDES += -I$(srcdir)/../../../WorldServer -I$(srcdir)/../../../../dep/src

AM_CXXFLAGS = -DSCRIPTLIB

lib_LTLIBRARIES = libServerStatusPlugin.la

libServerStatusPlugin_la_SOURCES = ServerStatusPlugin.cpp
